added click event to search button and api key for open weather map

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,12 @@
 .btn {
   margin: 10px 10px;
 }
+
+.card-body {
+  background-color: grey;
+  list-style: none;
+  color: black;
+}
+
+.uv-index {
+}
