trouble shooting fetch for lat/ long

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 .title {
   width: 100%;
+  padding: 2%;
   text-align: center;
   background-image: linear-gradient(
     to left,
@@ -26,11 +27,8 @@
   background-color: grey;
   list-style: none;
   color: black;
+  display: flex;
 }
 
 .uv-index {
-}
-
-.city {
-  font-size: large;
 }
