added previous search buttons and trouble shooting search input, currentWeather fetchWeather works but securrentWeather search does not because form-input value is undefined

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 }
 
 .card {
-  padding: 10px 10px;
+  padding: 40px 40px;
 }
 
 .btn1 {
@@ -28,6 +28,11 @@
   list-style: none;
   color: black;
   display: flex;
+  text-decoration: none;
+}
+
+#fiveDay-container {
+  background-color: rgba(137, 196, 244, 1);
 }
 
 .UV-index {
